@@ -40,8 +40,8 @@ plone.recipe.varnish = 1.2.2
 plone.recipe.zope2install = 3.2
 plone.recipe.zope2zeoserver = 1.4
 pyPDF = 1.13
-quintagroup.captcha.core = 0.3
-quintagroup.formlib.captcha = 1.4
+quintagroup.captcha.core = 0.4.3
+quintagroup.formlib.captcha = 1.4.2
 recaptcha-client = 1.0.6
 reportlab = 2.6
 roadrunner = 0.2.3.1
